# python-sdk

./: .editorconfig  .gitignore  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: build-and-publish.yml  create-release.yml  lint-and-test.yml
tests/: test_zero.py
zero_python_sdk/: __init__.py  zero.py
zero_sdk/: __init__.py  zero.py
