[tool.poetry]
name = "zero_python_sdk"
version = "0.2.0"
description = "zero client sdk"
authors = ["Misha-Otto <michael.zacharov@ottofeller.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
python-graphql-client = "0.4.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
autopep8 = "1.6.0"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
