[metadata]
name = Zero SDK
version = attr: zero_sdk.__version__
url = https://github.com/zerosecrets/python-sdk/
project_urls =
    Documentation = https://github.com/zerosecrets/python-sdk/blob/main/README.md
    Source Code = https://github.com/zerosecrets/python-sdk/
    Issue Tracker = https://github.com/zerosecrets/python-sdk/issues
license = ISC
author = Zero
author_email = hello@tryzero.com
maintainer = ottofeller
maintainer_email = hello@tryzero.com
description = Python SDK for [Zero](https://tryzero.com) - unique, powerful and secure secrets management software for the era of API Economy
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: ISC License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    python-graphql-client == 0.4.3
setup_requires =
    autopep8
    flake8
tests_require =
    pytest

[bdist_wheel]
universal = true

[sdist]
formats = gztar
